bat.bool1.diff21.Diff21.scala.error
Erreur de compilation :
Diff21:3: error: type mismatch;
 found   : Unit
 required: Int
  if (n<21) return 
            ^Diff21:3: error: type mismatch;
 found   : Unit
 required: Int
  if (n<21) return 
  ^